[package]
name = "my_clash_royale"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
polars = { version = "0.41.2", features = ["serde", "temporal", "json", "fmt", "lazy", "parquet"] }
polars-io = { version = "0.41.2", features = ["json"] }
chrono = "0.4"
dirs = "4.0"
